k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loan-model-service
spec:
  type: NodePort
  selector:
    app: loan-model
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
